--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "ngx-bootstrap": "^6.1.0",
     "rxjs": "~6.6.6",
     "tslib": "^2.0.0",
+    "web-animations-js": "^2.3.2",
     "zone.js": "~0.10.2"
   },
   "devDependencies": {
