--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "@angular/router": "~11.2.7",
     "@ng-bootstrap/ng-bootstrap": "^7.0.0",
     "bootstrap": "^4.5.0",
+    "core-js": "^3.9.1",
     "ng-recaptcha": "^7.0.1",
     "ngx-bootstrap": "^6.1.0",
     "rxjs": "~6.6.6",
