--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "@angular-devkit/build-angular": "^14.2.4",
     "@angular/cli": "^14.2.4",
     "@angular/compiler-cli": "^14.2.4",
+    "@ngx-env/builder": "^2.2.0",
     "@types/jasmine": "~3.6.0",
     "@types/jasminewd2": "~2.0.3",
     "@types/node": "^18.8.0",
